# Tobacco

./: .gitignore  Cargo.toml  README.md  grub.cfg  linker.ld  x86_64-unknown-none.json
.cargo/: config.toml
.github/workflows/: build.yml
bootimage-builder/: Cargo.toml
bootimage-builder/src/: main.rs
docs/: safe-qemu.md
scripts/: ci-fault-test.sh  ci-kernel-test.sh  ci-smoke-test.sh  grub-ci-proctree.cfg  grub-ci.cfg  run-qemu-headless.sh  run-qemu-safe.sh  run-qemu-terminal.sh
src/: buildinfo.rs  ci.rs  gdt.rs  heap.rs  interrupts.asm  interrupts.rs  ipc.rs  keyboard.rs  klog.rs  main.rs  memory.rs  multiboot.rs  paging.rs  physmem.rs  process.rs  scheduler.rs  serial.rs  shell.rs  stats.rs  syscall.rs  user.rs  user_program.rs  vga.rs
tools/: mkinitramfs.rs
