[package]
name = "cloudos-kernel"
version = "0.0.1"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
volatile = "0.5"
x86_64 = "0.15"

[build-dependencies]
bootloader = "0.11"

[workspace]
members = [".", "bootimage-builder"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
